Project

General

Profile

Actions

Bug #55901

closed

rgw_admin.cc warning: comparison of integer expressions of different signedness

Added by Casey Bodley almost 2 years ago. Updated almost 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

[ 92%] Building CXX object src/rgw/CMakeFiles/radosgw-admin.dir/rgw_admin.cc.o
src/rgw/rgw_admin.cc: In function ‘int bucket_source_sync_status(const DoutPrefixProvider*, rgw::sal::RadosStore*, const RGWZone&, const RGWZone&, RGWRESTConn*, const RGWBucketInfo&, rgw_sync_bucket_pipe, int, std::ostream&)’:
src/rgw/rgw_admin.cc:2598:18: warning: comparison of integer expressions of different signedness: ‘int’ and ‘const size_t’ {aka ‘const long unsigned int’} [-Wsign-compare]
     if (shard_id >= total_shards) {
         ~~~~~~~~~^~~~~~~~~~~~~~~
Actions #1

Updated by Casey Bodley almost 2 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to Casey Bodley
  • Pull request ID set to 46537
Actions #2

Updated by Casey Bodley almost 2 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF