rgw: fix un/signed comparison warnings in rgw_admin.cc

Fixes: https://tracker.ceph.com/issues/55901

Signed-off-by: Casey Bodley <cbodley@redhat.com>